[gd_scene load_steps=4 format=3 uid="uid://prdb2inpcaog"]

[ext_resource type="Script" path="res://control.gd" id="1_65rak"]

[sub_resource type="FontFile" id="FontFile_8n7lp"]
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Theme" id="Theme_4ajck"]
resource_local_to_scene = true
default_font = SubResource("FontFile_8n7lp")
default_font_size = 30

[node name="Main_Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4ajck")
script = ExtResource("1_65rak")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.5
offset_top = -50.5
offset_right = 215.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Play_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Option_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Option"

[node name="Quit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Play_Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Option_Button" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_button" to="." method="_on_quit_button_pressed"]
